--- a/src/Controls/KarveControls/HeaderedWindow/LineGridView.xaml
+++ b/src/Controls/KarveControls/HeaderedWindow/LineGridView.xaml
@@ -7,6 +7,7 @@
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"  
              xmlns:ei="http://schemas.microsoft.com/expression/2010/interactions"
              xmlns:karveControls="clr-namespace:KarveControls"
+             xmlns:converter="clr-namespace:KarveCommon.Converter;assembly=KarveCommon"
              xmlns:behaviour="clr-namespace:KarveControls.Behaviour"
              xmlns:gridbehaviours="clr-namespace:KarveControls.Behaviour.Grid"
              xmlns:syncfusion="http://schemas.syncfusion.com/wpf"
@@ -17,7 +18,10 @@
     <UserControl.Resources>
         
         <ResourceDictionary>
-        
+
+            <converter:KmIncludedToBoolConverter x:Key="KmBoolConverter"/>
+            <converter:BillToBookConverter x:Key="BillToBook"/>
+
             <DataTemplate x:Key="NavigateInvoiceItem">
             <Grid>
                 <Grid.ColumnDefinitions>
@@ -52,7 +56,7 @@
                 <Grid>
                    
                     <syncfusion:ComboBoxAdv DefaultText="..Eliges.." Grid.Column="0"
-                                            SelectedIndex="{Binding Path=Value}" Width="Auto">
+                                            SelectedIndex="{Binding Path=Bill,Converter={StaticResource BillToBook}}" Width="Auto">
                         <syncfusion:ComboBoxItemAdv Width="200">
                             <StackPanel Orientation="Horizontal">
                                 <Image Source="/KarveControls;component/Images/driver.png" Height="30"/>
@@ -77,7 +81,7 @@
 
                     <CheckBox  Grid.Column="0"
                                Content="Km Incluidos"
-                               IsChecked="{Binding Path=Value, Mode=TwoWay}">
+                               IsChecked="{Binding Path=Included, Mode=TwoWay, Converter={StaticResource KmBoolConverter}}">
                     </CheckBox>
                 </Grid>
             </DataTemplate>
@@ -95,7 +99,7 @@
                            Width="80"></TextBox>
                     <Button Grid.Column="1" x:Name="NavigateButton" BorderBrush="Transparent" Background="Transparent" 
                                         Width="50"
-                                        Height="20">
+                                        Height="40">
 
                         <Image Source="/KarveControls;component/Images/search.png"></Image>
                         <i:Interaction.Behaviors>
